// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Todo form should match snapshoot when have no text 1`] = `
<div>
  <styled.div
    className="position-relative"
  >
    <input
      className="form-control"
      id="todo_form_input"
      onChange={[Function]}
      onKeyUp={[Function]}
      placeholder="Enter job to be done"
      value=""
    />
  </styled.div>
</div>
`;

exports[`Todo form should match snapshoot when have text 1`] = `
<div>
  <styled.div
    className="position-relative"
  >
    <input
      className="form-control"
      id="todo_form_input"
      onChange={[Function]}
      onKeyUp={[Function]}
      placeholder="Enter job to be done"
      value="todoName"
    />
    <button
      icon="plus-circle"
      key="pug:0:0"
      onClick={[Function]}
      text="add"
    />
  </styled.div>
</div>
`;
